# pyrcel

./: .gitignore  .hgignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  Run Model - simple.ipynb  TODO.md  __init__.py  activation.py  activation_inhibition.py  aerosol.py  bin_2d.py  conf.py  constants.py  driver.py  environment.yml  ghan_test.py  index.rst  integrator.py  io.py  jac_jax_test.ipynb  kappa_test.py  lognorm.py  micro.py  mkdocs.yml  parcel.py  parcel.rst  parcel_aux.pyx  parcel_aux_bin.pyx  parcel_aux_port.py  parcel_bin.py  pce_params.py  prek.toml  pyproject.toml  (+18 more)
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
_build/html/: genindex.html  index.html  parcel.html  py-modindex.html  search.html  utilities.html
ci/: requirements-py26.yml  requirements-py27.yml  requirements-py310.yml  requirements-py311.yml  requirements-py34.yml  requirements-py35.yml  requirements-py36.yml  requirements-py37.yml  requirements-py38.yml  requirements-py39.yml
doc/: Makefile  conf.py  environment.yml  index.rst  install.rst  parcel.rst  reference.rst  sci_descr.rst
doc/examples/: Makefile  README.md  activate.ipynb  activate.rst  basic_run.ipynb  basic_run.rst
doc/templates/: class.rst
docs/: Makefile  build_doc.sh  conf.py  environment.yml  hooks.py  index.md  index.rst  install.rst  migration.md  numerical_methods.md  parcel.rst  reference.rst  requirements.txt  sci_descr.rst
docs/api/: activation.md  aerosol.md  distributions.md  ensemble.md  equilibrate.md  integrator.md  model.md  model_output.md  thermo.md  updraft.md
docs/design/: jax-diffrax-migration.md
docs/examples/: Makefile  README.md  activate.ipynb  activate.rst  activation_comparison.md  basic_run.ipynb  basic_run.md  basic_run.rst  differentiable_smax.md  live_run.md  sensitivity_sweep.md  updraft_ensemble.md
docs/getting_started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/templates/: class.rst
docs/user_guide/: best_practices.md  gpu.md  numerical_methods.md  sci_descr.md
examples/: README.md  activation_comparison.py  basic_run.py  differentiable_smax.py  live_run.py  sensitivity_sweep.py  simple.yml  simple_mono.yml  simple_supersat.yml  updraft_ensemble.py
examples/jax/: README.md  basic_run.py  differentiable_smax.py  live_run.py  updraft_ensemble.py
ext/: __init__.py
ext/disco/: disco_mixing.py  disco_query.py  ensembles.py  gen_param_test.py  process_runs.py  stats.py
ext/ghan/: Makefile  Makefile.legion  __init__.py  activation.py  ghan_act.f90  ghan_interface.f90  ghan_test.py  subgrid_mod.f90  test.py
ext/ming/: __init__.py  activate_ming.py  chem.mod  doit1  gen_dist.py  init.mod  para.mod  spec.inc  twomey.f  twomey.f.bak
ext/pce_fort/: pce_param.F90  run_me
fortran/parcel/: .depend  Makefile  aerosol.f90  constants.f90  main.f90  model.f90  thermo.f90  util.f90
ming/: activate_ming.py  doit2  gen_dist.py
notebooks/: R.txt  U.txt  activation.ipynb  classic_aerosol_comparisons.ipynb  srivastava IC.ipynb
parcel_model/: Makefile  __init__.py  activation.py  aerosol.py  constants.py  distributions.py  driver.py  integrator.py  io.py  parcel.py  parcel_aux.pyx  pce_params.py  postprocess.py  run_basic.py  run_model.ipynb  thermo.py  version.py  vis.py
parcel_model/data/: std_atm.csv
parcel_model/test/: __init__.py  generate_data.py  pm_test.py  test_thermo.py
pyrcel/: __init__.py  _parcel_aux_numba.py  _types.py  activation.py  aerosol.py  console_report.py  constants.py  distributions.py  driver.py  ensemble.py  equilibrate.py  equilibrate_jax.py  integrator.py  integrator_diffrax.py  model.py  model_jax.py  model_output.py  output.py  parcel.py  parcel_aux.py  parcel_aux.pyx  parcel_aux_jax.py  postprocess.py  thermo.py  thermo_jax.py  updraft.py  util.py  vis.py
pyrcel/activation/: __init__.py  _arg2000.py  _common.py  _mbn2014.py  _scheme.py
pyrcel/data/: std_atm.csv
pyrcel/legacy/: __init__.py  activation.py  driver.py  integrator.py  parcel.py  thermo.py  vis.py
pyrcel/scripts/: run_parcel.py
pyrcel/test/: __init__.py  generate_data.py  pm_test.py  results.dict  test_thermo.py
razzak_figures/: razzak_fig4.py  razzak_fig9.py
scripts/: run_parcel
site/: objects.inv  sitemap.xml
site/search/: search_index.json
src/: lognorm.py  micro.py  microphysics.py  nenes_gcc_plots.py  nenes_parcel.py  nenes_parcel_aux.pyx  nenes_parcel_clean.py  parcel.py  pywrfplotParams.py  pywrfplotUtils.py  setup.py  skewt_new.py  soundings.py  test_run.py
src/data/: 71203_2005-06-01-00:00:00.csv  71203_2005-06-01-12:00:00.csv  71600_2005-06-01-12:00:00.csv  71600_2005-06-01-23:00:00.csv  71603_2005-06-01-00:00:00.csv  71603_2005-06-01-12:00:00.csv  71701_2005-06-01-09:00:00.csv  71716_2005-06-01-14:00:00.csv  71716_2005-06-01-17:00:00.csv  71722_2005-06-01-12:00:00.csv  71801_2005-06-01-12:00:00.csv  71801_2005-06-01-23:00:00.csv  71815_2005-06-01-00:00:00.csv  71815_2005-06-01-12:00:00.csv  72201_2005-06-01-00:00:00.csv  72201_2005-06-01-12:00:00.csv  72202_2005-06-01-00:00:00.csv  72202_2005-06-01-12:00:00.csv  72206_2005-06-01-00:00:00.csv  72206_2005-06-01-12:00:00.csv  72208_2005-06-01-00:00:00.csv  72208_2005-06-01-12:00:00.csv  72210_2005-06-01-00:00:00.csv  72210_2005-06-01-12:00:00.csv  72214_2005-06-01-00:00:00.csv  72214_2005-06-01-12:00:00.csv  72215_2005-06-01-00:00:00.csv  (+259 more)
test/: Seq_test.py  activation_inhibition.py  kappa_test.py  nenes_gcc_plots.py  razzak_disco.py  test_pce_time.py
tests/: conftest.py  scenarios.py  test_activation.py  test_aerosol.py  test_cli.py  test_console_report.py  test_differentiability.py  test_ensemble.py  test_equilibration.py  test_mbn2014.py  test_model.py  test_model_jax.py  test_nd.py  test_nd_adjoint.py  test_netcdf_output.py  test_oracle_fixtures.py  test_output_formats.py  test_public_api.py  test_rhs_equivalence.py  test_termination.py  test_thermo.py  test_thermo_jax.py  test_trajectory.py  test_updraft.py
(+31 files in other folders)
