[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
description = "pyrcel: 0D adiabatic cloud parcel model"
name = "pyrcel"
authors = [
    { name = "Daniel Rothenberg", email = "daniel@danielrothenberg.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "xarray",
    "netcdf4",
    "pyyaml",
    "setuptools",
    "jax>=0.4.38",
    "diffrax>=0.6.2",
    "equinox>=0.11.10",
    "optimistix>=0.0.7",
]
dynamic = ["version"]

[project.optional-dependencies]
# Swap in CUDA-enabled JAX; all other v2 backend deps are already in core.
gpu = [
    "jax[cuda12]>=0.4.38",
    "diffrax>=0.6.2",
    "equinox>=0.11.10",
    "optimistix>=0.0.7",
]
test = [
    "pytest>=7",
    "hypothesis>=6",
    "pyright>=1.1.380",
]
examples = [
    "matplotlib>=3.5",
]

[project.urls]
Documentation = "https://pyrcel.readthedocs.io/en/latest/"
Repository = "https://github.com/darothen/pyrcel"

[tools.setuptools]
packages = ["pyrcel"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
version_file = "pyrcel/version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
# Notebooks in docs/ are legacy and will be rewritten in the docs overhaul (#44).
exclude = ["docs/examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "NPY"]

[tool.ruff.lint.per-file-ignores]
# --- pyrcel.legacy files ---
# These are the preserved NumPy/numba reference implementations. Violations here are
# tracked for future cleanup in #51. Any suppression that survives that audit must be
# explicitly documented.
"pyrcel/legacy/thermo.py" = ["F403", "F405", "UP031", "E731", "E501"]
"pyrcel/legacy/activation.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/legacy/postprocess.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/legacy/vis.py" = ["E731", "F841", "UP031", "E501"]
# --- public API shims ---
# F401: explicit `X as X` re-exports are intentional public API; I001: ruff isort
# rejects grouped re-export blocks — suppress rather than let it split them per-symbol.
"pyrcel/__init__.py" = ["F401", "I001"]
"pyrcel/activation/__init__.py" = ["F401"]
# --- other legacy/non-JAX package files ---
"pyrcel/aerosol.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/distributions.py" = ["UP031", "E501"]
"pyrcel/output.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/test/*.py" = ["F403", "F405", "F401", "UP031", "E501"]
"pyrcel/constants.py" = ["E501"]
# --- non-package files ---
# E402: import order is intentional (sys.path setup, warnings filter before imports)
"docs/conf.py" = ["E402"]
"tools/**/*.py" = ["E402", "E501"]

[tool.pyright]
include = ["pyrcel"]
exclude = ["pyrcel/legacy", "pyrcel/test", "pyrcel/scripts", "pyrcel/output.py"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# JAX/equinox/diffrax stubs are incomplete in some areas; suppress the noisiest
# false-positive categories that arise from those packages rather than our code.
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
# jax.typing.ArrayLike is a broad union that includes Python scalars; pyright
# cannot prove that JAX's dynamic dispatch always produces Array, so arithmetic
# on ArrayLike arguments and ArrayLike → Array returns trigger false positives.
reportOperatorIssue = false
reportReturnType = false
reportIndexIssue = false

[tool.pytest.ini_options]
markers = [
    "slow: full JAX/diffrax integration, autodiff, or ensemble solve (skip locally with -m 'not slow')",
]
filterwarnings = [
    "ignore:invalid value encountered in scalar divide:RuntimeWarning:pyrcel.legacy.activation",
]
