[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
description = "pyrcel: 0D adiabatic cloud parcel model"
name = "pyrcel"
authors = [
    { name = "Daniel Rothenberg", email = "daniel@danielrothenberg.com" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "polars",
    "xarray",
    "netcdf4",
    "pyyaml",
    "setuptools",
    "jax>=0.4.38",
    "diffrax>=0.6.2",
    "equinox>=0.11.10",
    "optimistix>=0.0.7",
]
dynamic = ["version"]

[project.optional-dependencies]
# Swap in CUDA-enabled JAX; all other v2 backend deps are already in core.
gpu = [
    "jax[cuda12]>=0.4.38",
    "diffrax>=0.6.2",
    "equinox>=0.11.10",
    "optimistix>=0.0.7",
]
test = [
    "pytest>=7",
    "hypothesis>=6",
    "pyrefly>=1.1",
]
examples = [
    "matplotlib>=3.5",
]

[project.scripts]
run_parcel = "pyrcel.scripts.run_parcel:run_parcel"

[project.urls]
Documentation = "https://pyrcel.readthedocs.io/en/latest/"
Repository = "https://github.com/darothen/pyrcel"

[tools.setuptools]
packages = ["pyrcel"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
version_file = "pyrcel/version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
# Notebooks in docs/ are legacy and will be rewritten in the docs overhaul (#44).
exclude = ["docs/examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "NPY"]

[tool.ruff.lint.per-file-ignores]
# --- pyrcel.legacy files ---
# Preserved NumPy/numba reference implementations; intentionally not modernised so
# they remain diff-comparable to the published v1 code.
# UP031/E731: printf-style strings and lambda assignments are idiomatic in the original.
# F841: intermediate variables aid readability of the physics.
# E501: long lines mirror the original equations; breaking them obscures the math.
# F403/F405 (thermo.py only): wildcard import from constants is the original style.
"pyrcel/legacy/thermo.py" = ["F403", "F405", "UP031", "E731", "E501"]
"pyrcel/legacy/activation.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/legacy/postprocess.py" = ["UP031", "E731", "F841", "E501"]
"pyrcel/legacy/vis.py" = ["E731", "F841", "UP031", "E501"]
# --- public API shims ---
# F401: explicit `X as X` re-exports are intentional public API; I001: ruff isort
# rejects grouped re-export blocks — suppress rather than let it split them per-symbol.
"pyrcel/__init__.py" = ["F401", "I001"]
"pyrcel/activation/__init__.py" = ["F401"]
# --- distributions.py ---
# LaTeX math in RST docstrings produces lines that cannot be split without breaking
# the rendered equations. E501 is the only remaining suppression; UP031 was fixed.
"pyrcel/distributions.py" = ["E501"]
# --- v1-era output module (pyrcel/output.py) ---
# Not part of the v2 public API (superseded by pyrcel/model_output.py); preserved for
# backward compatibility. UP031/E731/F841/E501: same rationale as pyrcel.legacy above.
"pyrcel/output.py" = ["UP031", "E731", "F841", "E501"]
# --- old unit-test suite (pyrcel/test/) ---
# Pre-v2 tests; not part of the new pytest suite in tests/. Kept for reference only.
"pyrcel/test/*.py" = ["F403", "F405", "F401", "UP031", "E501"]
# --- non-package files ---
# E402: import order is intentional (sys.path setup, warnings filter before imports)
"docs/conf.py" = ["E402"]
"tools/**/*.py" = ["E402", "E501"]

[tool.pytest.ini_options]
markers = [
    "slow: full JAX/diffrax integration, autodiff, or ensemble solve (skip locally with -m 'not slow')",
]
filterwarnings = [
    "ignore:invalid value encountered in scalar divide:RuntimeWarning:pyrcel.legacy.activation",
]

[tool.pyrefly]
project-includes = ["pyrcel"]
project-excludes = [
    "pyrcel/legacy",
    "pyrcel/test",
    "pyrcel/scripts",
    "pyrcel/output.py",
]
python-version = "3.11.0"
infer-with-first-use = false

[tool.pyrefly.errors]
# JAX/equinox/diffrax stubs are incomplete in some areas; suppress the noisiest
# false-positive categories that arise from those packages rather than our code.
# untyped-import: third-party JAX ecosystem packages lack complete stubs.
# bad-index / unsupported-operation: ArrayLike includes Python scalars; pyrefly
#   cannot prove JAX's dynamic dispatch always produces an indexable Array.
# implicit-any / implicit-any-parameter: accepted in JAX-heavy code where Any
#   leaks from untyped diffrax/equinox/optimistix callsites.
# bad-return: ArrayLike arithmetic on ArrayLike inputs produces non-Array types
#   in pyrefly's view, even though JAX always dispatches to Array at runtime.
untyped-import = "ignore"
bad-index = "ignore"
implicit-any = "ignore"
bad-return = "ignore"
unsupported-operation = "ignore"
implicit-any-parameter = "ignore"
